[build-system]
build-backend = "maturin"
requires = ["maturin>=0.14.0,<0.15"]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["numpy>=1.23", "pyarrow==10.0.1"]
description = "The Rerun Logging SDK"
keywords = ["computer-vision", "logging", "rerun"]
name = "rerun-sdk"
requires-python = ">=3.8"

[[project.authors]]
email = "opensource@rerun.io"
name = "Rerun.io"

[project.license]
text = "MIT OR Apache-2.0"

[project.optional-dependencies]
tests = ["pytest==7.1.2"]

[project.urls]
documentation = "https://www.rerun.io/docs"
homepage = "https://www.rerun.io"
repository = "https://github.com/rerun-io/rerun"

[project.scripts]
rerun = "rerun.__main__:main"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.maturin]
# We use a python package from inside the rerun_sdk folder to avoid conflicting
# with the other `rerun` pypi package. The rerun_sdk.pth adds this to the pythonpath
# which then allows `import rerun` to work as expected.
# See https://github.com/rerun-io/rerun/pull/1085 for more details
include = ["rerun_sdk.pth", "rerun_sdk/rerun_demo/demo.rrd"]
locked = true
python-packages = ["rerun_sdk/rerun", "rerun_sdk/rerun_demo"]
