[package]
name = "run_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
cargo-run-wasm.workspace = true
pico-args.workspace = true
webbrowser.workspace = true
re_workspace_hack = { version = "0.1", path = "../crates/re_workspace_hack" }
