[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
publish = false


[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["puffin"]
puffin = ["dep:puffin", "dep:puffin_http", "eframe/puffin"]


[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
comms = { path = "../comms", features = ["client"] }
log_types = { path = "../log_types", features = ["save", "load"] }

# We use bleeding edge egui, from 2022-04-19
eframe      = { git = "https://github.com/emilk/egui", rev = "f789159a4a5675ffa197b2a528b6ba0aaaa9693a", features = ["dark-light", "persistence"] }
egui          = { git = "https://github.com/emilk/egui", rev = "f789159a4a5675ffa197b2a528b6ba0aaaa9693a", features = ["extra_debug_asserts"] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "f789159a4a5675ffa197b2a528b6ba0aaaa9693a", features = ["tracing"] }
egui_glow   = { git = "https://github.com/emilk/egui", rev = "f789159a4a5675ffa197b2a528b6ba0aaaa9693a" }
# eframe      = { path = "../../../egui/eframe", features = ["dark-light", "persistence"] }
# egui        = { path = "../../../egui/egui", features = ["extra_debug_asserts"] }
# egui_extras = { path = "../../../egui/egui_extras", features = ["tracing"] }
# egui_glow   = { path = "../../../egui/egui_glow" }

anyhow = "1.0"
cgmath = { version = "0.18", features = ["mint"] }
glam = { version = "0.20", features = ["mint"] }
glow = "0.11"
image = { version = "0.23", default-features = false, features = ["png"] }
itertools = "0.10"
macaw = { version = "0.17", features = ["with_serde"] }
mint = "0.5"
nohash-hasher = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rfd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# We use bleeding edge three-d from 2022-04-12
three-d = { git = "https://github.com/asny/three-d", rev = "4cd766c1d5672ce02d444dc475684e24cc42e68b", default-features = false, features = [
    "gltf-io",
    "obj-io",
] }
tracing = "0.1"
vec1 = "1.8"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "2.1", default-features = false, features = [
    "image-data",
] }
puffin = { version = "0.13", optional = true }
puffin_http = { version = "0.10", optional = true }
tracing-subscriber = "0.3"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
# TODO: consider using mimalloc

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
