[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
publish = false


[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["puffin"]
puffin = ["dep:puffin", "dep:puffin_http", "eframe/puffin"]


[dependencies]
comms = { path = "../comms", features = ["client"] }
data_store = { path = "../data_store", features = ["puffin"] }
log_types = { path = "../log_types", features = ["save", "load"] }
rr_string_interner = { path = "../rr_string_interner" }

# We use bleeding edge egui, from 2022-06-09
eframe      = { git = "https://github.com/emilk/egui", rev = "317436c0570dde617fb408d6c9a973c5dd0a2fc4", features = ["persistence"] }
egui        = { git = "https://github.com/emilk/egui", rev = "317436c0570dde617fb408d6c9a973c5dd0a2fc4", features = ["extra_debug_asserts", "tracing"] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "317436c0570dde617fb408d6c9a973c5dd0a2fc4", features = ["tracing"] }
egui_glow   = { git = "https://github.com/emilk/egui", rev = "317436c0570dde617fb408d6c9a973c5dd0a2fc4" }
# eframe      = { path = "../../../egui/eframe", features = ["persistence"] }
# egui        = { path = "../../../egui/egui", features = ["extra_debug_asserts", "tracing"] }
# egui_extras = { path = "../../../egui/egui_extras", features = ["tracing"] }
# egui_glow   = { path = "../../../egui/egui_glow" }

ahash = "0.7"
anyhow = "1.0"
bytemuck = "1.7"
cgmath = { version = "0.18", features = ["mint"] }
clap = { version = "3.1.6", features = ["derive"] }
glam = { version = "0.20", features = ["mint"] }
glow = "0.11"
image = { version = "0.23", default-features = false, features = ["png"] }
itertools = "0.10"
log = "0.4"  # TODO: tracing specific crate instead
log-once = "0.3" # TODO: tracing specific crate instead
macaw = { version = "0.17", features = ["with_serde"] }
mint = "0.5"
nohash-hasher = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rfd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# We use bleeding edge three-d from 2022-05-22
three-d = { git = "https://github.com/asny/three-d", rev = "43f210668197e8b1dc50ea9f074d2b8426ecb0f2", default-features = false, features = [
    "gltf-io",
    "obj-io",
] }
tracing = "0.1"
vec1 = "1.8"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "2.1", default-features = false, features = [
    "image-data",
] }
mimalloc = "0.1.29"
puffin = { version = "0.13", optional = true }
puffin_http = { version = "0.10", optional = true }
tracing-subscriber = "0.3"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
# TODO: consider using mimalloc

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
