[package]
name = "web_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
publish = false


[features]
__ci = [] # when set: will compile despite missing wasm artifact, BUT IT WON'T RUN!


[dependencies]
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
glob = "0.3.0"
