[package]
name = "re_analytics"
authors.workspace = true
description = "Rerun's analytics SDK"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
# Internal dependencies:
re_build_info.workspace = true
re_log.workspace = true

# External dependencies:
crossbeam.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.1", features = ["serde", "v4", "js"] }
ehttp.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.58", features = ["Storage"] }


[build-dependencies]
re_build_tools.workspace = true
