[package]
name = "re_arrow_store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = true


[features]
default = []

## Enables `parking_lot`'s deadlock detection background thread.
deadlock_detection = ["parking_lot/deadlock_detection"]

## Integration with `polars`, to efficiently use the datastore with dataframes.
polars = ["dep:polars-core", "dep:polars-ops"]


[dependencies]
# Rerun dependencies:
re_format = { path = "../re_format" }
re_log = { path = "../re_log" }
re_log_types = { path = "../re_log_types" }

# External dependencies:
ahash = "0.8"
anyhow.workspace = true
arrow2 = { workspace = true, features = [
  "compute_concatenate",
  "compute_aggregate",
] }
chrono = "0.4"
document-features = "0.2"
indent = "0.1"
itertools = "0.10"
nohash-hasher = "0.2"
parking_lot = "0.12"
static_assertions = "1.1"
thiserror.workspace = true

# Native dependencies:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin.workspace = true

# Optional dependencies:
polars-core = { workspace = true, optional = true, features = [
  "diagonal_concat",
  "dtype-date",
  "dtype-datetime",
  "dtype-time",
  "dtype-struct",
  "sort_multiple",
] }
polars-ops = { workspace = true, optional = true, features = [
  "dtype-date",
  "dtype-datetime",
  "dtype-time",
  "dtype-struct",
] }


[dev-dependencies]
criterion = "0.4"
mimalloc = "0.1"
polars-core = { workspace = true, features = [
  "diagonal_concat",
  "dtype-date",
  "dtype-datetime",
  "dtype-struct",
  "dtype-time",
  "fmt",
  "sort_multiple",
] }
rand = "0.8"


[lib]
bench = false


[[example]]
name = "dump_dataframe"
path = "examples/dump_dataframe.rs"
required-features = ["polars"]

[[example]]
name = "latest_component"
path = "examples/latest_component.rs"
required-features = ["polars"]

[[example]]
name = "latest_components"
path = "examples/latest_components.rs"
required-features = ["polars"]

[[example]]
name = "range_components"
path = "examples/range_components.rs"
required-features = ["polars"]


[[bench]]
name = "data_store"
harness = false
