[package]
name = "re_arrow_store"
authors.workspace = true
description = "An in-memory time series database for Rerun log data, based on Apache Arrow"
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true


[features]
default = []

## Enables access to re_types' test components/datatypes.
testing = ["re_types/testing"]

## Enables `parking_lot`'s deadlock detection background thread.
deadlock_detection = ["parking_lot/deadlock_detection"]

## Integration with `polars`, to efficiently use the datastore with dataframes.
polars = ["dep:polars-core", "dep:polars-ops"]

## When set, only run the core set of benchmark suites.
## Commonly set implicitly by --all-features, e.g. on CI.
core_benchmarks_only = []


[dependencies]
# Rerun dependencies:
re_error.workspace = true
re_format.workspace = true
re_log_types.workspace = true
re_log.workspace = true
re_tracing.workspace = true
re_types.workspace = true

# External dependencies:
ahash.workspace = true
arrow2 = { workspace = true, features = ["compute_concatenate"] }
document-features.workspace = true
indent.workspace = true
itertools = { workspace = true }
nohash-hasher.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
thiserror.workspace = true

# Optional dependencies:
polars-core = { workspace = true, optional = true, features = [
  "diagonal_concat",
  "dtype-date",
  "dtype-datetime",
  "dtype-time",
  "dtype-struct",
  "sort_multiple",
] }
polars-ops = { workspace = true, optional = true, features = [
  "dtype-date",
  "dtype-datetime",
  "dtype-time",
  "dtype-struct",
] }


[dev-dependencies]
re_types = { workspace = true, features = ["datagen"] }

anyhow.workspace = true
criterion.workspace = true
mimalloc.workspace = true
polars-core = { workspace = true, features = [
  "diagonal_concat",
  "dtype-date",
  "dtype-datetime",
  "dtype-struct",
  "dtype-time",
  "fmt",
  "sort_multiple",
] }
rand.workspace = true
tinyvec.workspace = true

[lib]
bench = false


[[example]]
name = "dump_dataframe"
path = "examples/dump_dataframe.rs"
required-features = ["polars", "testing"]

[[example]]
name = "latest_component"
path = "examples/latest_component.rs"
required-features = ["polars"]

[[example]]
name = "latest_components"
path = "examples/latest_components.rs"
required-features = ["polars"]

[[example]]
name = "range_components"
path = "examples/range_components.rs"
required-features = ["polars"]


[[bench]]
name = "data_store"
harness = false
required-features = ["testing"]

[[bench]]
name = "arrow2"
harness = false
required-features = ["testing"]

[[bench]]
name = "vectors"
harness = false
